--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "author": "max ogden",
   "license": "BSD",
   "dependencies": {
-    "hex-grid": "^2.0.1",
-    "jsonlint": "^1.6.2"
+    "hex-grid": "^2.0.2",
+    "jsonlint": "^1.6.2",
+    "package-lock.json": "^1.0.0",
+    "requirements": "^1.3.1"
   },
   "devDependencies": {
-    "browserify": "^7.0.0",
+    "browserify": "^7.1.0",
     "glob": "^6.0.4",
     "standard": "^5.4.1",
-    "wzrd": "^1.4.0"
+    "wzrd": "^1.5.0"
   }
 }
