Hopefully fixed the triggering of deploys

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,7 @@ jobs:
           route: POST /repos/:repository/dispatches
           repository: HHEU/wiki
           event_type: Deploy
+          mediaType: '{"previews": ["everest"]}'
+
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
